--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset='UTF-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <title>freeCodeCamp Leaderboard</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <!--
       <link rel="icon" type="image/png" href="/favicon.png">
     -->
